fix: add dark mode support

--- a/packages/extension/src/global.css
+++ b/packages/extension/src/global.css
@@ -8,7 +8,13 @@
   --brand-700: #2b6cb0;
   --brand-800: #2c5282;
   --brand-900: #2a4365;
-  background-color: #fff;
+
+  --bg-color-1: #fff;
+  --bg-color-2: var(--gray-100);
+  --bg-color-3: var(--gray-300);
+  --bg-color-4: var(--gray-400);
+
+  background-color: var(--bg-color-1);
   font-family: -apple-system, system-ui, 'Segoe UI Web (West European)',
     'Segoe UI', Roboto, 'Helvetica Neue', sans-serif;
   --font-size: 13px;
@@ -16,7 +22,10 @@
 
 @media (prefers-color-scheme: dark) {
   :global(.fxtrot-edge) {
-    background-color: rgb(59, 59, 59);
+    --bg-color-1: rgb(51, 51, 51);
+    --bg-color-2: rgb(59, 59, 59);
+    --bg-color-3: rgb(90, 90, 90);
+    --bg-color-4: rgb(111, 111, 111);
     --text-color: #fff;
     --text-color-light: var(--gray-200);
     --border-color: rgb(107, 107, 107);
