--- a/packages/extension/src/popup/History/styles.css
+++ b/packages/extension/src/popup/History/styles.css
@@ -1,27 +1,26 @@
 .history {
   height: calc(100vh - 38px);
   overflow-y: scroll;
-  background-color: var(--gray-100);
-  border-bottom: 1px solid transparent;
+  background-color: var(--bg-color-1);
 }
 
 .list {
   margin: 0;
   list-style: none;
   padding: 0;
+  border-right: 1px solid var(--bg-color-3);
 }
 
 .entry {
   height: auto;
-  border-radius: var(--br);
   cursor: pointer;
   transition: 0.24s ease-in;
-  background-color: var(--gray-100);
+  background-color: var(--bg-color-2);
   &:not(:last-child) {
-    border-bottom: 1px solid var(--gray-300);
+    border-bottom: 1px solid var(--bg-color-3);
   }
   &:hover {
-    background-color: var(--gray-300);
+    background-color: var(--bg-color-3);
   }
 }
 
@@ -31,9 +30,9 @@
 
 @media (prefers-color-scheme: dark) {
   .historyHeading:hover {
-    --bg-color: hsla(0, 0%, 100%, 0.1);
+    --bg-color: var(--bg-color-3);
   }
   .historyHeading:active {
-    --bg-color: hsla(0, 0%, 100%, 0.15);
+    --bg-color: var(--bg-color-4);
   }
 }
